[package]
name = "frippy"
version = "0.4.0"
authors = ["Jokler <jokler.contact@gmail.com>"]
repository = "https://github.com/Mavulp/frippy"
readme = "README.md"
license = "MIT"
keywords = ["irc", "bot"]
categories = ["network-programming"]
description = "An IRC Bot"

[[bin]]
name = "frippy"
doc = false

[features]
mysql = [
  "diesel",
  "diesel_infer_schema",
  "diesel_migrations",
  "r2d2",
  "r2d2-diesel"
]

[dependencies]
log             = "0.4.5"
time            = "0.1.40"
humantime       = "1.1.1"
rlua            = "0.14.2"
reqwest         = "0.9.0"
regex           = "1.0.5"
lazy_static     = "1.1.0"
serde           = "1.0.79"
serde_json      = "1.0.27"
chrono          = "0.4.6"
glob            = "0.2.11"
circular-queue  = "0.2.0"
failure         = "0.1.2"
htmlescape      = "0.3.1"
antidote        = "1.0.0"
log4rs          = "0.8.0"

frippy_derive = { path = "frippy_derive" }

# TODO Use crates.io again, as soon as OpenSSL 1.1.1 is supported
[dependencies.irc]
git = 'https://github.com/aatxe/irc/'
branch = 'develop'

[dependencies.unicode_names]
git = 'https://github.com/Jokler/unicode_names'
branch = 'update-to-latest-unicode'


[dependencies.diesel]
version = "1.3.3"
optional = true
features = ["mysql", "chrono"]

[dependencies.diesel_infer_schema]
version = "1.3.0"
optional = true
features = ["mysql"]

[dependencies.diesel_migrations]
version = "1.3.0"
optional = true
features = ["mysql"]

[dependencies.r2d2]
version = "0.8.2"
optional = true

[dependencies.r2d2-diesel]
version = "1.0.0"
optional = true

[dependencies.clippy]
version = "*"
optional = true
