[package]
name = "frippy"
version = "0.5.1"
authors = ["Jokler <jokler@protonmail.com>"]
repository = "https://github.com/Mavulp/frippy"
readme = "README.md"
license = "MIT"
keywords = ["irc", "bot"]
categories = ["network-programming"]
description = "An IRC Bot"
edition = "2018"

[[bin]]
name = "frippy"
doc = false

[features]
mysql = [
  "diesel",
  "diesel_migrations",
  "r2d2",
  "r2d2-diesel"
]

[dependencies]
irc             = "0.13.6"
log             = "0.4.6"
time            = "0.1.42"
humantime       = "1.2.0"
rlua            = "0.16.3"
reqwest         = "0.9.18"
regex           = "1.1.8"
lazy_static     = "1.3.0"
serde           = "1.0.94"
serde_json      = "1.0.40"
chrono          = "0.4.7"
glob            = "0.3.0"
circular-queue  = "0.2.0"
failure         = "0.1.5"
htmlescape      = "0.3.1"
antidote        = "1.0.0"
log4rs          = "0.8.3"
itertools       = "0.8.2"

frippy_derive = { path = "frippy_derive" }
rand = "0.7.0"

[dependencies.unicode_names]
git = 'https://github.com/Jokler/unicode_names'
branch = 'update-to-latest-unicode'

[dependencies.diesel]
version = "1.4.2"
optional = true
features = ["mysql", "chrono"]

[dependencies.diesel_migrations]
version = "1.4.0"
optional = true
features = ["mysql"]

[dependencies.r2d2]
version = "0.8.5"
optional = true

[dependencies.r2d2-diesel]
version = "1.0.0"
optional = true
